# ctp_py

./: .gitignore  logging.conf
resources/3D/: Abstract.cfg  Apartment.cfg  Apartment_hard.cfg  Apartment_robot.mtl  Home.cfg  Twistycool.cfg  Twistycool_robot.mtl  Twistycooler.cfg  Twistycooler_robot.mtl  alpha-1.0.cfg  alpha-1.1.cfg  alpha-1.2.cfg  alpha-1.5.cfg  alpha.cfg  bugtrap.cfg  cubicles.cfg  escape.cfg  escape_robot.mtl  pipedream.cfg  pipedream_ring.cfg  ring.mtl  spirelli.cfg  spirelli_robot.mtl
resources/Robots/: wafr1.cfg  wafr2.cfg  wafr2_10dof.cfg  wafr2_6dof.cfg  wafr3.cfg  wafr3_nobaserotation.cfg  wafr4.cfg  wafr4_wide.cfg
resources/Robots/RobotDescriptions/clsrobo_63430_description/: CMakeLists.txt  package.xml
resources/Robots/RobotDescriptions/clsrobo_63430_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  urdf.rviz
resources/Robots/RobotDescriptions/clsrobo_63430_description/meshes/: 0_link.stl  2_link.stl  3_link.stl  4_link.stl  5_link.stl  6_link.stl
resources/Robots/RobotDescriptions/clsrobo_63430_description/urdf/: URDF.gazebo  URDF.trans  URDF.urdf  URDF.xacro  materials.xacro
resources/candidates/: 2022-01-17-22%3A28%3A21_ctp_output_samples_wafr1.csv
resources/out_files/: 20220128_1857_wafr2  20220128_1859_wafr2.conf  20220128_2012_wafr2  20220128_2012_wafr2.conf  20220128_2114_wafr2  20220130_0119_wafr3  20220130_0119_wafr3.conf  20220130_0119_wafr3.uuids  20220130_1150_wafr3_nobaserotation  20220130_1150_wafr3_nobaserotation.conf  20220130_1150_wafr3_nobaserotation.uuids  (+77 more)
(+177 files in other folders)
